src/objects/Agenda__c.object
<CustomObject>
    <description>Block of available time for Event Meeting Scheduling</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Attendee to whom this Agenda applies.</description>
        <inlineHelpText>The Attendee to whom this Agenda applies.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>The end date and time of this Agenda.</description>
        <inlineHelpText>The end date and time of this Agenda.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to associated Event on Agenda.</description>
        <inlineHelpText>Lookup to associated Event on Agenda.</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventtiaID__c</fullName>
        <description>ID of the Eventtia Agenda.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Eventtia Agenda.</inlineHelpText>
        <label>Eventtia ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>The start date and time of this Agenda.</description>
        <inlineHelpText>The start date and time of this Agenda.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Agenda</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ag-{0000}</displayFormat>
        <label>Agenda Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>